@@ -1,7 +1,7 @@
 package de.mpmediasoft.jfxtools.skiafx;
 
-//import java.lang.foreign.MemorySegment; // new
-import jdk.incubator.foreign.MemorySegment; // old
+import java.lang.foreign.MemorySegment; // new
+//import jdk.incubator.foreign.MemorySegment; // old
 
 import java.lang.reflect.Field;
 import java.nio.Buffer;
@@ -111,8 +111,8 @@ public class SkiaSurfaceFX {
     
     private final long getBufferPointer(ByteBuffer byteBuffer) throws Exception {
         if (AVOID_ILLEGAL_REFLECTION) {
-          return MemorySegment.ofByteBuffer(byteBuffer).address().toRawLongValue();   // old
-//            return MemorySegment.ofBuffer(byteBuffer).address().toRawLongValue();       // new
+//          return MemorySegment.ofByteBuffer(byteBuffer).address().toRawLongValue();   // old
+            return MemorySegment.ofBuffer(byteBuffer).address();                        // new
         } else {        
             Field address = Buffer.class.getDeclaredField("address");
             address.setAccessible(true);
